CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(funratest)

SET(SRC_BIN
    ${RPROJECT_ROOT}/rbase/common/test/rtest_collections.c
    rtest.c
    )

IF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    SET(LINK_TEST_LIBS ${LINK_LIBS} 3rd/cmockad)
ELSE()
    SET(LINK_TEST_LIBS ${LINK_LIBS} libcmockad.so)
ENDIF()

MESSAGE(STATUS "Platform: ${CMAKE_HOST_SYSTEM_NAME} - ${CMAKE_CURRENT_SOURCE_DIR}")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_BIN})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_TEST_LIBS})